--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     </head>
 
     <body>
-        <!-- aa22-->
+        <div class="instagram-wrapper">
+            <div class="instagram-phone">
+                <img id="ig-celular" src="./img/instagram-celular.png" alt="celular">
+            </div>
+            <div class="instagram-continue">
+                <div class="group">
+                    <img id="ig-logo" src="./img/instagram-logo.png" class="instagram-logo" alt="Logo do instagram">
+                    <div class="profile-photo">
+                        <img src="./img/foto-perfil.jpg" alt="Foto de perfil">
+                    </div>
+                    <a href="#" class="instagram-login">Continue como vdalsasso</a>
+                    <a href="#" class="instagram-logout">Remover conta</a>
+                </div>
+                <div class="class group">
+                    <p class="not-account">Não é vdalsasso?</p>
+                    <p class="notaccount">
+                        <span class="link-blue">Alternar conta</span>
+                        ou
+                        <span class="link-blue">Registrar</span>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
