webpage inicial do isntagram finalizada

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <a href="#" class="instagram-login">Continue como vdalsasso</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
                 </div>
-                <div class="class group">
+                <div class="group">
                     <p class="not-account">Não é vdalsasso?</p>
-                    <p class="notaccount">
+                    <p class="not-account">
                         <span class="link-blue">Alternar conta</span>
                         ou
                         <span class="link-blue">Registrar</span>
